--- a/index.html
+++ b/index.html
@@ -34,53 +34,18 @@
 <div class="uk-flex-last">
     <div class="uk-card uk-card-primary uk-card-body" id="weekaorb">Is it week A or week B?</div>
     <div>
-        <div class="uk-background-secondary uk-padding uk-light" id="answer">It's Week A Dude!</div>
+        <div class="uk-background-secondary uk-padding uk-light" id="answer">It's the Summer Holiday!</div>
     </div>
 </div>
-<div class="uk-child-width-1-3" uk-grid>
+<div class="uk-child-width-1-1" uk-grid>
     <div>
         <div class="uk-light uk-background-transparent uk-padding">
-            <h4 style="font-size: 2em">What week is it next week?</h4>
-            <strike><p style="font-size: 1.3em">It's going to be Week B on Sunday 8th July</strike> There are no more weeks...</p>
-        </div>
-    </div>
-    <div>
-        <div class="uk-light uk-background-transparent uk-padding">
-            <h3>Wifi has been fixed!</h3>
-            <p>Connect to 'Gems' Wifi</p>
-            <p>User: firstName.firstLetterOfLastName_wis</p>
-            <p>Password: gwis(year of year 13 graduation)</p>
-          	<!--<button class="uk-button uk-button-default uk-margin-small-right" type="button"><a href="WIS Programming Challenge.html">WIS Programming Challenge</a></button>-->
-            <button class="uk-button uk-button-default uk-margin-small-right" type="button" uk-toggle="target: #openlol">More information</button>
-        </div>
-    </div>
-    <div>
-        <div class="uk-light uk-background-transparent uk-padding">
-            <h2>Downloads</h2>
-            <h3><a class="uk-link-heading effect-underline" href="https://drive.google.com/open?id=0B3hWkpiS2FTDbl93M2VfSlUweUk" data-hover="Android APK App">Android APK App</a></h3>
-            <h3><a class="uk-link-heading effect-underline" href="https://docs.google.com/presentation/d/1PMhAt5wKzH7W_AXQaPwxtU2JnoOcmXRDYJLihu1m3wo/edit?usp=sharing" data-hover="iOS App Tutorial">iOS App Tutorial</a></h3>
-            <!--<h3><a class="uk-link-heading effect-underline" href="Timetable2018.pdf" data-hover="Summer 2018 I/GCSE Exam Timetable">Summer 2018 I/GCSE Exam Timetable</a></h3>
-            <h3><a class="uk-link-heading effect-underline" href="Week Five - WISdom Weeks Sunday 3rd June.pdf" data-hover="Summer 2018 WISDOM Sessions Timetable">Summer I/GCSE 2018 WISDOM Sessions Timetable</a></h3>
-            <h3><a class="uk-link-heading effect-underline" href="WISDOM Sessions Timetable FINAL.pdf" data-hover="WISDOM Sessions Timetable">WISDOM Sessions Timetable</a></h3>-->
+            <h3>Good Bye World!</h3>
+            <p style="font-size: 1.2em">This was an amazing project for me this year! I really enjoyed every part of it, and thanks to all the people to used the site and supported me throughout. I started this project on 21st October 2017 and ended the project on 5th July 2018 with a whopping 1,800 Total Users which includes teachers, students and everyone else who decided to stop by the site and also with 4,073 Total Sessions and 5,314 Total Views. The Github Repository <a href="https://www.github.com/ramzialhaddadtm/isitweekaorweekb">https://www.github.com/ramzialhaddadtm/isitweekaorweekb</a> will stay in an archive state until further notice while the domain <a href="http://isitweekaorweekb.com">http://isitweekaorweekb.com</a> will still forward to this site and hopefully I can sell it to a school. I would also like to thank to all the grammar nazis who've not at all helped me spell better throughout the year. Lastly, I wish all the best to everyone's results and everyone's bright future. Finally, if you want to get into contact with me for whatever reason you can find my email on my <a href="https://www.github.com/ramzialhaddadtm">Github Profile</a></p>
         </div>
     </div>
 </div>
 <div id="openlol" uk-modal>
-    <div class="uk-modal-dialog uk-modal-body">
-        <h2 class="uk-modal-title">More information</h2>
-        <ul class="uk-list uk-list-divider">
-        	<li>In some devices not all of the items on the page show, so zoom out to ensure you're not missing anything</li>
-        	<li>Also it is confirmed that the 2 week timetable will not continue next year, so this project is unfortunately coming to a close and will hopefully be handed over to another school. Thank you to everyone who made this possible!</li>
-        	<li>Good luck to everyone's results on August 23rd!</li>
-            <li>Thanks to everyone who made my school life!</li>
-        </ul>
-        <hr>
-        <h>Website Re-Design - Atomicsong @ Commit #89</h>
-        <p>If you know how to improve this website, please visit my GitHub <a href="https://github.com/ramzialhaddadtm/isitweekaorweekb">here</a> and either fork or make changes then make a pull request or give suggestions using the Issue report feature <a href="https://github.com/ramzialhaddadtm/isitweekaorweekb/issues">here</a></p>
-        <p class="uk-text-right">
-            <button class="uk-button uk-button-default uk-modal-close" type="button">Close</button>
-        </p>
-    </div>
 </div>
 <canvas id="canvas" width="1950px" height="800px"></canvas>
 <canvas id="canvasbg" width="1950px" height="800px"></canvas>
