--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="uk-flex-last">
     <div class="uk-card uk-card-primary uk-card-body" id="weekaorb">Is it week A or week B?</div>
     <div>
-        <div class="uk-background-secondary uk-padding uk-light" id="answer">It's the Summer Holiday!</div>
+        <div class="uk-background-secondary uk-padding uk-light" id="answer">It's the Summer Holiday! (Except Not :/)</div>
     </div>
 </div>
 <div class="uk-child-width-1-1" uk-grid>
